--- a/README
+++ b/README
@@ -1,10 +1,18 @@
-# Hi, I'm Dakir 👋
+# Hi, I'm Dakir
 
-I'm a Python Django developer passionate about building **elegant, multi-language web applications** and e-commerce platforms.  
+I'm a **full-stack developer** passionate about building **functional, user-friendly web applications** and systems that make a real impact.  
+  
+## 💻 Skills
+- **Backend:** Python, Django, SQL, PL/SQL  , C#
+- **Frontend:** HTML, CSS, JavaScript, Bootstrap  
+- **Other:** REST APIs, PDF generation, multi-language support, secure payments  
 
-🌹 **Specialty:** Web apps for online shopping, product catalogs, admin dashboards  
-💻 **Tech stack:** Python, Django, HTML/CSS, JavaScript  
-🌐 **Projects:** NASMA Perfume E-Shop, other personal projects  
-📫 **Contact:** dakir@example.com  
+## 🚀 Projects
+- **NASMA Perfume E-Shop:** Fully functional e-commerce platform with shopping cart, multi-language support, secure checkout, and admin dashboard.  
+- **Clinic Management Systems:** Complete solutions for patient records, appointments, payments, and medical analyses.  
+- **Patient Assistant System (Thesis Project):** Web-based intelligent system that guides patients to the most suitable clinic based on their conditions.  
 
-Let's build something amazing together!
+## 📫 Contact Me
+- Email: dakirboulemchaour@gmail.com  
+
+
