Update section titles in README

--- a/README
+++ b/README
@@ -7,12 +7,12 @@ I'm a **full-stack developer** passionate about building **functional, user-frie
 - **Frontend:** HTML, CSS, JavaScript, Bootstrap  
 - **Other:** REST APIs, PDF generation, multi-language support, secure payments  
 
-## 🚀 Projects
+## 🐬 Projects
 - **NASMA Perfume E-Shop:** Fully functional e-commerce platform with shopping cart, multi-language support, secure checkout, and admin dashboard.  
 - **Clinic Management Systems:** Complete solutions for patient records, appointments, payments, and medical analyses.  
 - **Patient Assistant System (Thesis Project):** Web-based intelligent system that guides patients to the most suitable clinic based on their conditions.  
 
-## 📫 Contact Me
+## 🦅 Contact Me
 - Email: dakirboulemchaour@gmail.com  
 
 
