Revise README with new projects and skills
Updated README to reflect new projects and interests.

--- a/README
+++ b/README
@@ -1,18 +1,16 @@
 # Hi, I'm Dakir
 
 I'm a **full-stack developer** passionate about building **functional, user-friendly web applications** and systems that make a real impact.  
-  
-## 💻 Skills
-- **Backend:** Python, Django, SQL, PL/SQL  , C#
-- **Frontend:** HTML, CSS, JavaScript, Bootstrap  
-- **Other:** REST APIs, PDF generation, multi-language support, secure payments  
 
-## 🐬 Projects
-- **NASMA Perfume E-Shop:** Fully functional e-commerce platform with shopping cart, multi-language support, secure checkout, and admin dashboard.  
-- **Clinic Management Systems:** Complete solutions for patient records, appointments, payments, and medical analyses.  
+## 🐬 new Projects  
 - **Patient Assistant System (Thesis Project):** Web-based intelligent system that guides patients to the most suitable clinic based on their conditions.  
+
+## 🏆 interested 
+- cybersecurty 
 
 ## 🦅 Contact Me
 - Email: dakirboulemchaour@gmail.com  
+
+
 
 
