Revise README content and structure
Updated README to improve clarity and formatting.

--- a/README
+++ b/README
@@ -1,16 +1,19 @@
-# Hi, I'm Dakir
+# Hi, I’m Dakir
 
-I'm a **full-stack developer** passionate about building **functional, user-friendly web applications** and systems that make a real impact.  
+3rd-year **Computer Science student** focused on **backend systems and full-stack web development**.  
+I build practical applications involving **client–server communication, databases, and system logic**.
 
-## 🐬 new Projects  
-- **Patient Assistant System (Thesis Project):** Web-based intelligent system that guides patients to the most suitable clinic based on their conditions.  
+## 🚀 Current Project
+**Patient Assistant System (Bachelor Thesis)**  
+Web-based system that guides patients to appropriate clinics based on their conditions.
 
-## 🏆 interested 
-- cybersecurty 
+## 🧠 Interests
+- Backend & system development  
+- Networking  
+- Cybersecurity  
 
-## 🦅 Contact Me
-- Email: dakirboulemchaour@gmail.com  
+## 🛠️ Tech
+C / C++ · Python · Django · SQL · HTML/CSS · Git
 
-
-
-
+## 📫 Contact
+dakirboulemchaour@gmail.com
