Add JavaScript to tech stack in README
Updated tech stack to include JavaScript.

--- a/README
+++ b/README
@@ -13,7 +13,7 @@ Web-based system that guides patients to appropriate clinics based on their cond
 - Cybersecurity  
 
 ## 🛠️ Tech
-C / C++ · Python · Django · SQL · HTML/CSS · Git
+C / C++ · Python · Django · SQL · HTML/CSS/JS · Git
 
 ## 📫 Contact
 dakirboulemchaour@gmail.com
