Update project title in README

--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 I build practical applications involving **client–server communication, databases, and system logic**.
 
 ## 🚀 Current Project
-**Patient Assistant System (Bachelor Thesis)**  
+**Smart platfrom for patients and clinics NERO (Bachelor Thesis)**  
 Web-based system that guides patients to appropriate clinics based on their conditions.
 
 ## 🧠 Interests
