--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-# Hi, I’m Dakir ![Gameplay demo](uzumaki-naruto-shippuden.gif)
+# Hi, I’m Dakir 
+![Gameplay demo](uzumaki-naruto-shippuden.gif)
 
 3rd-year **Computer Science student** focused on **backend systems and full-stack web development**.  
 I build practical applications involving **client–server communication, databases, and system logic**.
